Add swagger api documentation POST /register
